[package]
name = "emulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false     # Disable integer overflow checks.

[dependencies]
stick = "0.10.1"
arr_macro = "0.1.3"
minifb = "0.19.3"
time = "*"
fixed-map = "0.7.2"